Added Franton's write-up section

--- a/index.html
+++ b/index.html
@@ -68,11 +68,17 @@
               Siri also pulls relevant information cards that give a visual addition to the audio that is spoken. These interactive cards provide a clean and uncluttered interface.
               There is also an option to get more information and link out to other resources if you cannot find the information you are looking for in the simplified version.</p>
           <h4>Wikipedia - Franton</h4>
-            <p></p>
+            <p>Wikipedia is an example of how crowdsourcing information can be extremely successful and powerful. Even though no single person is responsible of keeping track of the 
+              information, Wikipedia pages remain incredibly up-to-date and relevant. This is because Wikipedia has a huge community of passionate users who maintain the information. 
+              Crowdsourcing information about immigration could be a way to keep the information up to date, potentially in multiple languages. The downside of crowdsourcing is that 
+              it can be hard to get off the ground and may not always be consistent. Wikipedia's homepage is also extremely language and user friendly, with many options for languages 
+              immediately displayed and a search bar that usually brings the user directly to a page with information. Taking cues from Wikipedia by having many languages up front and 
+              search bar navigation may help us to create a user friendly interface. Each of Wikipedia's pages, however, are often very dense with text and not necessarily the easiest 
+              to read.</p>
           <h4>Touchscreen Building Directory - Haley</h4>
             <img src="images/touchscreen_bd_1.png" alt="Touchscreen BD">
             <img src="images/touchscreen_bd_2.png" alt="Touchscreen BD UI">
-            <p</p>
+            <p></p>
           <h4>Google Search - Radmer</h4>
             <img src="images/google_search.png" alt="Google Search">
             <p>With Google search, all questions you have can be answered in a generally definitive way. If I were to type a question such as "what is the weather,"
