--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <h1 class="center">Team Badlands</h1>
     <h4 class="center">Aaron Greiner, Franton Lin, Haley Pelletier, Radmer ver der Heyde, Shrinidhi Thirumalai</h4>
     <br>
+
       <h2>Inspirational Designs</h2>
         <h3>Group Ideation</h3>
           <h4>Siri</h4>
@@ -60,6 +61,7 @@
           <h4><a href="http://www.rockthevote.com/">RockTheVote.com</a></h4>
             <p>Autofills your information onto the voter registration form, that you can then print and send out.</p>
             <br><br>
+
         <h3>Individual Write-ups</h3>
           <h4>Siri - Aaron</h4>
             <p>Using natural language, you can ask Siri anything and it will try to bring up the relevant information.
@@ -68,17 +70,23 @@
               Siri also pulls relevant information cards that give a visual addition to the audio that is spoken. These interactive cards provide a clean and uncluttered interface.
               There is also an option to get more information and link out to other resources if you cannot find the information you are looking for in the simplified version.</p>
           <h4>Wikipedia - Franton</h4>
-            <p>Wikipedia is an example of how crowdsourcing information can be extremely successful and powerful. Even though no single person is responsible of keeping track of the 
-              information, Wikipedia pages remain incredibly up-to-date and relevant. This is because Wikipedia has a huge community of passionate users who maintain the information. 
-              Crowdsourcing information about immigration could be a way to keep the information up to date, potentially in multiple languages. The downside of crowdsourcing is that 
-              it can be hard to get off the ground and may not always be consistent. Wikipedia's homepage is also extremely language and user friendly, with many options for languages 
-              immediately displayed and a search bar that usually brings the user directly to a page with information. Taking cues from Wikipedia by having many languages up front and 
-              search bar navigation may help us to create a user friendly interface. Each of Wikipedia's pages, however, are often very dense with text and not necessarily the easiest 
+            <p>Wikipedia is an example of how crowdsourcing information can be extremely successful and powerful. Even though no single person is responsible of keeping track of the
+              information, Wikipedia pages remain incredibly up-to-date and relevant. This is because Wikipedia has a huge community of passionate users who maintain the information.
+              Crowdsourcing information about immigration could be a way to keep the information up to date, potentially in multiple languages. The downside of crowdsourcing is that
+              it can be hard to get off the ground and may not always be consistent. Wikipedia's homepage is also extremely language and user friendly, with many options for languages
+              immediately displayed and a search bar that usually brings the user directly to a page with information. Taking cues from Wikipedia by having many languages up front and
+              search bar navigation may help us to create a user friendly interface. Each of Wikipedia's pages, however, are often very dense with text and not necessarily the easiest
               to read.</p>
           <h4>Touchscreen Building Directory - Haley</h4>
             <img src="images/touchscreen_bd_1.png" alt="Touchscreen BD">
             <img src="images/touchscreen_bd_2.png" alt="Touchscreen BD UI">
-            <p></p>
+            <p>Touchscreen building directories are great examples of how to provide strictly relevant information via a simple, intuitive interface. They typically reside in the
+              lobbies of large, commercial buildings and list the names of businesses within the building and the floors and suite numbers at which they reside. They will usually
+              also show the locations of restrooms, telephones, cafeterias, parking, and other services within the building. In some cases, they even show a weather forecast, which
+              can be useful for commuters planning their trip home or their trip to work the next day. The touchscreens themselves are large, and their interfaces typically include
+              a list of every business and service within the building. The combination of convenient location, limited information, and intuitive interface means that you don't
+              have to go searching for the information you need -- it's just there. We can draw inspiration from these qualities, as this is the kind of experience we want to emulate
+              in our project.</p>
           <h4>Google Search - Radmer</h4>
             <img src="images/google_search.png" alt="Google Search">
             <p>With Google search, all questions you have can be answered in a generally definitive way. If I were to type a question such as "what is the weather,"
@@ -87,7 +95,7 @@
               user it feels as if Google knows what question was asked and tailored its display accordingly. Also even if I leave off information necessary to answer the question
               asked like my location, Google search will still be able to answer it by pulling in more information than I provided in the search bar. For our concept, users
               should feel the answers we provide are definitive in this same way. That might mean we want to borrow the concept of a card containing the "best" answer or
-              something similar to this. We might also want to use similar dynamic graphics or visualizations in our product as those help provide more details to the user.   </p>
+              something similar to this. We might also want to use similar dynamic graphics or visualizations in our product as those help provide more details to the user.</p>
           <h4>The Work Department - Shrinidhi</h4>
             <p></p>
 </body>
