Added Shrinidhi's write-up

--- a/index.html
+++ b/index.html
@@ -97,6 +97,12 @@
               should feel the answers we provide are definitive in this same way. That might mean we want to borrow the concept of a card containing the "best" answer or
               something similar to this. We might also want to use similar dynamic graphics or visualizations in our product as those help provide more details to the user.</p>
           <h4>The Work Department - Shrinidhi</h4>
-            <p></p>
+            <p>The Work Dept speaks to the accessibility component of our project. The Work dept is a women-led design consultancy based in Detroit, that makes complex information
+              easy to understand. Their chart below visualizes a family's qualification for several financial aid options. The infographic is friendly (bright colors and happy emojis)
+              and accessible (large fonts and simple wording).</p>
+            <img src="images/work_dept_1.png" alt="The Work Dept 1">
+            <p>The Work Dept. also works directly with our user group. Many of their past works are targeted to low income, immigrant parents. These projects are both in both English
+              and Spanish (an example is shown below). This is a reminder to us that having multiple languages is very important to our product.</p>
+            <img src="images/work_dept_2.png" alt="The Work Dept 2">
 </body>
 </html>
