Added links to other pages to index page

--- a/consent.html
+++ b/consent.html
@@ -1,18 +1,29 @@
-<h2>Consent Narrative</h2>
+<!DOCTYPE html>
+<html>
+<head>
+  <title>HFID 2016 | Badlands</title>
+  <link rel="stylesheet" type="text/css" href="style.css" />
+</head>
+<body>
+  <a href="index.html"><button>Back</button></a>
 
-<h3>Purpose: </h3>
-<p>We are students from Olin College of Engineering participating in a human-centered design class. We are designing an interface to improve access to government information that immigrants may find useful. </p>
+  <h2>Consent Narrative</h2>
 
-<h3>Your role: </h3>
-<p>We would like to work with you in order to design an interface that best suits citizens’ needs. We will ask for your time for some quick interviews. We may also ask you to participate in co-design activities in order to better understand the experience. We will be asking approval for note-taking, audio recording, photography, and video recording. You can give consent to all, none, or some of these methods.</p>
+  <h3>Purpose: </h3>
+  <p>We are students from Olin College of Engineering participating in a human-centered design class. We are designing an interface to improve access to government information that immigrants may find useful. </p>
 
-<h3>Time commitment: </h3>
-<p> We value your time and will work around your schedule. We shouldn’t take up more than 30 minutes for an interview. Please let us know if any problems arise and we will be eager to hear and do our best to help and work around your schedule. </p>
+  <h3>Your role: </h3>
+  <p>We would like to work with you in order to design an interface that best suits citizens’ needs. We will ask for your time for some quick interviews. We may also ask you to participate in co-design activities in order to better understand the experience. We will be asking approval for note-taking, audio recording, photography, and video recording. You can give consent to all, none, or some of these methods.</p>
 
-<h3>Confidentiality: </h3>
-<p>As human researchers, we maintain confidentiality of all personal information we collect. All names and personal information will be used with pseudonyms. We may also inquire for photos or recordings to improve our understanding, which may be shown to others in the class, but will always ask permission before obtaining and if publishing is an option. </p>
+  <h3>Time commitment: </h3>
+  <p> We value your time and will work around your schedule. We shouldn’t take up more than 30 minutes for an interview. Please let us know if any problems arise and we will be eager to hear and do our best to help and work around your schedule. </p>
 
-<h3>Compensation: </h3>
-<p>We cannot offer monetary compensation for your cooperation and service. However, we believe there is value in the knowledge gained through our collaboration.  We are actively working to improve the accessibility of government information and to understand the ways in which citizens interact with their local governments’ websites.</p>
+  <h3>Confidentiality: </h3>
+  <p>As human researchers, we maintain confidentiality of all personal information we collect. All names and personal information will be used with pseudonyms. We may also inquire for photos or recordings to improve our understanding, which may be shown to others in the class, but will always ask permission before obtaining and if publishing is an option. </p>
 
-<p>Please let us know if you approve of these conditions and/or if anything needs to be clarified or modified. </p>
+  <h3>Compensation: </h3>
+  <p>We cannot offer monetary compensation for your cooperation and service. However, we believe there is value in the knowledge gained through our collaboration.  We are actively working to improve the accessibility of government information and to understand the ways in which citizens interact with their local governments’ websites.</p>
+
+  <p>Please let us know if you approve of these conditions and/or if anything needs to be clarified or modified. </p>
+</body>
+</html>
