--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <body>
   <h1 class="center">Team Badlands</h1>
   <h4 class="center">Aaron Greiner, Franton Lin, Haley Pelletier, Radmer ver der Heyde, Shrinidhi Thirumalai</h4><br>
+  <a href="brief.html">Project Brief</a><br><br>
   <a href="consent.html">Consent Form</a><br><br>
   <a href="inspiration.html">Inspirational Designs Assignment</a><br><br>
 </body>
