--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
   <a href="brief.html">Project Brief</a><br><br>
   <a href="consent.html">Consent Form</a><br><br>
   <a href="inspiration.html">Inspirational Designs Assignment</a><br><br>
+  <a href="needs_analysis.html">Needs Analysis</a><br><br>
 </body>
 </html>
