Added Design Artifacts page to website

--- a/needs_analysis.html
+++ b/needs_analysis.html
@@ -49,6 +49,9 @@
     done. In the future, our solution should become the first stop to for information
     or completing tasks involving the government.</p>
 
+  <h3>Design Artifacts:</h3>
+  <a href="artifacts.html">See our design artifacts here</a>
+
   <h3>Narrative:</h3>
   <p><i>Story grounding approach with evidence</i></p>
   <p>Emily is excited and nervous about graduating college and going to work at Ernst
