--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
   <a href="consent.html">Consent Form</a><br><br>
   <a href="inspiration.html">Inspirational Designs Assignment</a><br><br>
   <a href="needs_analysis.html">Needs Analysis</a><br><br>
+  <a href="artifacts.html">Design Artifacts</a><br><br>
 </body>
 </html>
