Change .jpg case for artifacts pictures

--- a/artifacts.html
+++ b/artifacts.html
@@ -8,14 +8,14 @@
   <a href="index.html"><button>Back</button></a>
   <h2>Design Artifacts</h2>
     <h3>People Portraits</h3>
-      <img src="images/alex_portrait.jpg" alt="Alex Portrait"><br><br>
-      <img src="images/cecelia_portrait.jpg" alt="Cecelia Portrait"><br><br>
-      <img src="images/jacob_portrait.jpg" alt="Jacob Portrait"><br><br>
-      <img src="images/shayna_portrait.jpg" alt="Shayna Portrait"><br><br>
+      <img src="images/alex_portrait.JPG" alt="Alex Portrait"><br><br>
+      <img src="images/cecelia_portrait.JPG" alt="Cecelia Portrait"><br><br>
+      <img src="images/jacob_portrait.JPG" alt="Jacob Portrait"><br><br>
+      <img src="images/shayna_portrait.JPG" alt="Shayna Portrait"><br><br>
     <h3>Characterization Axes</h3>
-      <img src="images/axes.jpg" alt="Characterization Axes"><br><br>
+      <img src="images/axes.JPG" alt="Characterization Axes"><br><br>
     <h3>Personas</h3>
-      <img src="images/emily_persona.jpg" alt="Emily Persona"><br><br>
-      <img src="images/douglas_persona.jpg" alt="Douglas Persona"><br><br>
+      <img src="images/emily_persona.JPG" alt="Emily Persona"><br><br>
+      <img src="images/douglas_persona.JPG" alt="Douglas Persona"><br><br>
 </body>
 </html>
