Add link on homepage to Design Development page

--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
   <a href="inspiration.html">Inspirational Designs Assignment</a><br><br>
   <a href="needs_analysis.html">Needs Analysis</a><br><br>
   <a href="artifacts.html">Design Artifacts</a><br><br>
+  <a href="design_development.html">Design Development</a><br><br>
 </body>
 </html>
