--- a/design_development.html
+++ b/design_development.html
@@ -39,7 +39,7 @@
   <h4>Prototype One: Timeline</h4>
   <p>In our usability study with the timeline prototype, we tasked users to
     complete their I-20 form, which is the form an institution gives approving
-    each user’s study there. They completed a form to determine what Visa they
+    each user's study there. They completed a form to determine what Visa they
     needed and what path they should take to get it. Following that, the users
     were presented with a timeline containing tasks represented by cards. Cards
     could be clicked, and a information panel would appear at the bottom of the
@@ -47,9 +47,9 @@
     marked done to complete the task. Some tasks had prerequisites, and so if
     they clicked the card before the prerequisite tasks were completed, the done
     box would be replaced with an x preventing them from completing in.</p>
-  <br><br>
+  <br>
   <p>From our usability studies, we found that there were many points of confusion
-    with this prototype. First, users were confused on what the prototype’s
+    with this prototype. First, users were confused on what the prototype's
     purpose was. Did it complete my application for me? Was it to walk me through
     the process or to keep track of where I was like a checklist? Second, the
     timeline page was overwhelming at first. Users spent a lot of time
@@ -76,7 +76,7 @@
     people who had gone through a similar process and were available to chat.
     The user could then ask the person any questions, and once the issue was
     resolved, close the window.</p>
-  <br><br>
+  <br>
   <p>In our studies using the list of steps prototype with assistance provided by
     pairing users at different stages in the process, we found that the task-based
     system was well-received, but users were not interested in the chat option.
@@ -88,7 +88,7 @@
     easier to fill out the form. Users were at first confused about the order in
     which the steps were placed, and so an important iteration would be to have
     the finished tasks on the top.</p>
-  <br><br>
+  <br>
   <p>While our initial conversations with users seemed to point to a feature that
     would allow the user to connect with another person that had gone through a
     similar process, this ended up not feature that users were interested in. This
@@ -104,7 +104,7 @@
     photos of documents were required, a input bubble would pop up allowing the
     user to add the image needed with the app also validating it to make sure it
     was correct.
-  <br><br>
+  <br>
   <p>However, in walking users through the prototype, like when we walked them
     through the timeline, users were confused whether the app was actually
     completing their application for them or just walking them through completing
@@ -119,7 +119,7 @@
     from both of our prototypes that users liked: the left to right layout of the
     timeline, and the expanding panel from the list of steps. We also use bubble
     size on the timeline to express subtasks of a larger task.</p>
-  <br><br>
+  <br>
   <p>In our card sorting exercise and in our usability test, Users showed they
     care a lot about the timing of tasks--when they should start them and when
     are they due--the context around tasks, how to complete a task, and what are
@@ -138,15 +138,15 @@
     online by people who had been through the process before. People also seemed
     to generally react positively to the idea of connecting with other people
     going through the process at the same time as them.</p>
-  <br><br>
+  <br>
   <p>When we asked users why they did not like this feature, they said that they
     did not trust random strangers who just happened to be using the app at the
     same time as them to answer their questions. They did not believe that these
     people would necessarily have enough knowledge to be able to help them with
     anything, since they also had not been through the process yet. One user
-    said that they didn’t want the app to be like a “social network.” What we
+    said that they didn't want the app to be like a "social network." What we
     learned from this was that we were trying to solve two separate needs with
-    one prototype, and those two needs didn’t mesh together particularly well.
+    one prototype, and those two needs didn't mesh together particularly well.
     While our user group might enjoy and benefit from a social network-type app,
     they do not want this to be a part of their Visa application process. The
     insight that we gained from this is that it is best to design for just one
@@ -160,7 +160,7 @@
     from both of our prototypes that users liked: the left to right layout of the
     timeline, and the expanding panel from the list of steps. We also use bubble
     size on the timeline to express subtasks of a larger task.</p>
-  <br><br>
+  <br>
   <p>In our card sorting exercise and in our usability test, Users showed they
     care a lot about the timing of tasks--when they should start them and when
     are they due--the context around tasks, how to complete a task, and what are
