Resize images on Design Development page

--- a/design_development.html
+++ b/design_development.html
@@ -61,15 +61,15 @@
     expressed, but they did not seem to care much about spacing along the
     timeline representing time.</p>
 
-    <img src="images/start_1.jpg" alt="Timeline 1">
-    <img src="images/start_2.jpg" alt="Timeline 2">
-    <img src="images/start_3.jpg" alt="Timeline 3">
-    <img src="images/start_4.jpg" alt="Timeline 4">
-    <img src="images/timeline_1.jpg" alt="Timeline 5">
-    <img src="images/timeline_2.jpg" alt="Timeline 6">
-    <img src="images/timeline_3.jpg" alt="Timeline 7">
-    <img src="images/timeline_4.jpg" alt="Timeline 8">
-    <img src="images/timeline_5.jpg" alt="Timeline 9">
+    <img class=smallimage src="images/start_1.jpg" alt="Timeline 1">
+    <img class=smallimage src="images/start_2.jpg" alt="Timeline 2">
+    <img class=smallimage src="images/start_3.jpg" alt="Timeline 3">
+    <img class=smallimage src="images/start_4.jpg" alt="Timeline 4">
+    <img class=smallimage src="images/timeline_1.jpg" alt="Timeline 5">
+    <img class=smallimage src="images/timeline_2.jpg" alt="Timeline 6">
+    <img class=smallimage src="images/timeline_3.jpg" alt="Timeline 7">
+    <img class=smallimage src="images/timeline_4.jpg" alt="Timeline 8">
+    <img class=smallimage src="images/timeline_5.jpg" alt="Timeline 9">
 
   <h3>Prototype Two: List of Steps and Chat Pairing</h3>
   <p>With our list-based and task-oriented prototype, we asked users to go
