Add List images on Design Development page

--- a/design_development.html
+++ b/design_development.html
@@ -107,6 +107,12 @@
     did not appeal to the users. Users were more likely to consult a FAQ, Google,
     or an administrator rather than the chat.</p>
 
+  <img class=smallimage src="images/list_1.jpg" alt="List 1">
+  <img class=smallimage src="images/list_2.jpg" alt="List 2">
+  <img class=smallimage src="images/list_3.jpg" alt="List 3">
+  <img class=smallimage src="images/list_4.jpg" alt="List 4">
+  <img class=smallimage src="images/list_5.jpg" alt="List 5">
+
   <h3>Prototype Three: Chat</h3>
   <p>We also tested a chat/messenger based prototype with our users. Users were
     tasked to also complete up to their I-20 form. Users completed each task step
