Add card sorting picture to the Design Development page

--- a/design_development.html
+++ b/design_development.html
@@ -146,6 +146,8 @@
     size indicating that the larger bubble needs the smaller bubbles to be
     finished first.</p>
 
+  <img class=smallimage src="images/cards.jpg" alt="Card Sorting">
+
   <h3>Key Insight</h3>
   <p>In trying to produce a design that addresses our brief, we realized that
     people were not particularly fond of our chat pairing prototype. We were
