Add Final Design pictures to Design Development page

--- a/design_development.html
+++ b/design_development.html
@@ -136,6 +136,9 @@
     timeline, and the expanding panel from the list of steps. We also use bubble
     size on the timeline to express subtasks of a larger task.</p>
 
+  <img class=smallimage src="images/final_design_1.jpg" alt="Final Design 1">
+  <img class=smallimage src="images/final_design_2.jpg" alt="Final Design 2">
+
   <p>In our card sorting exercise and in our usability test, Users showed they
     care a lot about the timing of tasks--when they should start them and when
     are they due--the context around tasks, how to complete a task, and what are
