--- a/design_development.html
+++ b/design_development.html
@@ -138,6 +138,7 @@
 
   <img class=smallimage src="images/final_design_1.jpg" alt="Final Design 1">
   <img class=smallimage src="images/final_design_2.jpg" alt="Final Design 2">
+  <img class=smallimage src="images/final_design_3.jpg" alt="Final Design 3">
 
   <p>In our card sorting exercise and in our usability test, Users showed they
     care a lot about the timing of tasks--when they should start them and when
@@ -149,7 +150,7 @@
     size indicating that the larger bubble needs the smaller bubbles to be
     finished first.</p>
 
-  <img class=smallimage src="images/cards.jpg" alt="Card Sorting">
+  <img src="images/cards.jpg" alt="Card Sorting">
 
   <h3>Key Insight</h3>
   <p>In trying to produce a design that addresses our brief, we realized that
