Fix image size on Design Development page

--- a/design_development.html
+++ b/design_development.html
@@ -150,7 +150,7 @@
     size indicating that the larger bubble needs the smaller bubbles to be
     finished first.</p>
 
-  <img src="images/cards.jpg" alt="Card Sorting">
+  <img class=mediumimage src="images/cards.jpg" alt="Card Sorting">
 
   <h3>Key Insight</h3>
   <p>In trying to produce a design that addresses our brief, we realized that
