Fix test of Shortcomings section on Design Development phase

--- a/design_development.html
+++ b/design_development.html
@@ -175,23 +175,15 @@
     need at a time.</p>
 
   <h3>Shortcomings</h3>
-  <p>We noticed from our paper prototypes that there was confusion among our
-    users about what the prototype was actually doing, so we aimed to solidify
-    that in our final design. Our design is for managing the Visa application
-    process. It does not complete the application for the user. It takes elements
-    from both of our prototypes that users liked: the left to right layout of the
-    timeline, and the expanding panel from the list of steps. We also use bubble
-    size on the timeline to express subtasks of a larger task.</p>
-
-  <p>In our card sorting exercise and in our usability test, Users showed they
-    care a lot about the timing of tasks--when they should start them and when
-    are they due--the context around tasks, how to complete a task, and what are
-    the prerequisites of a task. Our design meets all of these by having a
-    recommended start date and a deadline for each large task or milestone, by
-    having lots of room on the expanding panel for a description of why this step
-    is necessary and how to complete it, and by having a linear progression with
-    size indicating that the larger bubble needs the smaller bubbles to be
-    finished first.</p>
+  <p>One shortcoming of our approach is that the paper prototypes that we
+    created are written entirely in English with no option to change the language.
+    This assumes that our users are sufficiently proficient in English, which may
+    or may not be a reasonable assumption. On one hand, our user group does consist
+    entirely of students, and typically English proficiency is a prerequisite for
+    studying abroad in the U.S. On the other hand, this is not something that we
+    specifically addressed during our user testing sessions in the Design
+    Development phase, and is probably something that we should look into
+    further moving forward.</p>
 
 </body>
 </html>
