--- a/index.html
+++ b/index.html
@@ -1,17 +1,13 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>HFID 2016 | Badlands</title>
-  <link rel="stylesheet" type="text/css" href="style.css" />
-</head>
-<body>
-  <h1 class="center">Team Badlands</h1>
-  <h4 class="center">Aaron Greiner, Franton Lin, Haley Pelletier, Radmer ver der Heyde, Shrinidhi Thirumalai</h4><br>
-  <a href="brief.html">Project Brief</a><br><br>
-  <a href="consent.html">Consent Form</a><br><br>
-  <a href="inspiration.html">Inspirational Designs Assignment</a><br><br>
-  <a href="needs_analysis.html">Needs Analysis</a><br><br>
-  <a href="artifacts.html">Design Artifacts</a><br><br>
-  <a href="design_development.html">Design Development</a><br><br>
-</body>
-</html>
+---
+layout: default
+title: Your New Jekyll Site
+---
+
+<div id="home">
+  <h1>Blog Posts</h1>
+  <ul class="posts">
+    {% for post in site.posts %}
+      <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="/sa2017/badlands/jekyll/_site/{{ post.url }}">{{ post.title }}</a></li>
+    {% endfor %}
+  </ul>
+</div>
