Reordering our structure
final design is first, followed by initial designs, followed by
shortcomings

--- a/design_development.html
+++ b/design_development.html
@@ -9,23 +9,6 @@
 
   <h2>Design Development</h2>
 
-  <h3>Shortcomings of Our Approach (From Needs Analysis Phase)</h3>
-  <p>One shortcoming of our approach in the Needs Analysis phase was that we
-    decided on a problem to solve based on limited knowledge of our users. We
-    started out with a rough idea for our user group: immigrant families looking
-    for schools for their children. After spending some time trying to find users
-    to interview, we realized that this group would not be easily accessible to
-    us. Given the time constraints of this phase of the course, we decided to
-    pivot to a more accessible user group that was in the same vein as the first:
-    international and exchange students going through the paperwork process for
-    studying in the U.S. Because it took us a while to come to this realization
-    and to pivot our target user group, we ended up with even less time than
-    expected to interview users. The information that we collected was based
-    on limited information from a small set of initial user interviews. Thus,
-    the need that we had chosen to address and our initial ideas for solutions
-    may not have been as strong as they would have been otherwise. We aimed to
-    address this during the Design Development phase, adjusting our solution and
-    possible implementations accordingly as we did user testing.</p>
 
   <h3>Process Overview</h3>
   <p>Last phase, we narrowed down our problem to assisting international and
@@ -175,8 +158,29 @@
     need at a time.</p>
 
   <h3>Shortcomings</h3>
-  <p>One shortcoming of our approach is that the paper prototypes that we
-    created are written entirely in English with no option to change the language.
+  
+  <h4>The Process:</h4>
+  <p>In our overall process (from needs analysis to now), we
+    decided on a problem to solve based on limited knowledge of our users. We
+    started out with a rough idea for our user group: immigrant families looking
+    for schools for their children. After spending some time trying to find users
+    to interview, we realized that this group would not be easily accessible to
+    us. Given the time constraints of this phase of the course, we decided to
+    pivot to a more accessible user group that was in the same vein as the first:
+    international and exchange students going through the paperwork process for
+    studying in the U.S. Because it took us a while to come to this realization
+    and to pivot our target user group, we ended up with even less time than
+    expected to interview users. The information that we collected was based
+    on limited information from a small set of initial user interviews. Thus,
+    the need that we had chosen to address and our initial ideas for solutions
+    may not have been as strong as they would have been otherwise. We aimed to
+    address this during the Design Development phase, adjusting our solution and
+    possible implementations accordingly as we did user testing.
+    </p>
+
+  <h4>The Prototype:</h4>
+  <p>
+  The paper prototypes that we created are written entirely in English with no option to change the language.
     This assumes that our users are sufficiently proficient in English, which may
     or may not be a reasonable assumption. On one hand, our user group does consist
     entirely of students, and typically English proficiency is a prerequisite for
