Added final design info

--- a/design_development.html
+++ b/design_development.html
@@ -19,6 +19,58 @@
     one. From these usability studies, we collected feedback and synthesized the
     results into a final design. We will summarize our findings below.</p>
 
+  <h3>Final Design</h3>
+
+  <img class=smallimage src="images/final_design_1.jpg" align = "left" alt="Final Design 1">
+
+  <p>Our product is an interface to help manage the Visa application process for exchange students. It does not complete the application for the user. Rather, it provides information on deadlines, and the steps you need to take to complete your visa. The key features are:</p>
+
+  <ul>
+    <li><h4>A step based approach</h4> Users wanted to see a simple left to right or top down progression of what they have to do for their visa, step by step. Our timeline prototype allowed users to jump around in a different order, but it was still used only left-to-right in testing. Our list prototype was also used only top-to-down.</li>
+
+    <li><h4>Detailed help on how to complete each step</h4>We learned from our timeline prototype that just giving the basic steps like “acceptance letter” or “passport copy” are not enough. Students want to see more information on what each of those mean, and how to complete them.</li>
+
+    <li><h4>Ability to see a high level overview</h4>Users wanted to move through the tasks in order quickly, just to see their entire process before they even started. We originally had the “done” or “checkoff” button be the central call to action for each screen, and realized this wasn’t the right priority. This prototype, each screen’s primary call to action is the “next” button.</li>
+
+    <li><h4>Dates are extremely important to see at all times</h4>Dates and deadlines are very important to our users, because it was universally ranked within the top 5 on our cardsortings (results explained in further detail below). This prototype shows dates for all tasks on the top bar, and a detailed description of suggested start dates in each task.</li>
+
+    <li><h4>Prerequisites are important, and must be visualized in an intuitive way</h4>Prerequisites were also universally ranked within the top 5 in our cardsorting results. Our timeline showed prerequisites, but in many places, and in a slightly more confusing way. This prototype tries a new visualization: small dots are prerequisites, leading up to big dots, which are the final forms. This allows the prerequisites to work with our step based approach, and we will have to do further testing to see if it’s a useful visualization.</li>
+  </ul>
+
+  <p>In our card sorting exercise and in our usability test, Users showed they
+    care a lot about the timing of tasks--when they should start them and when
+    are they due--the context around tasks, how to complete a task, and what are
+    the prerequisites of a task. Our design meets all of these by having a
+    recommended start date and a deadline for each large task or milestone, by
+    having lots of room on the expanding panel for a description of why this step
+    is necessary and how to complete it, and by having a linear progression with
+    size indicating that the larger bubble needs the smaller bubbles to be
+    finished first.</p>
+
+  <img class=mediumimage src="images/cards.jpg" alt="Card Sorting">
+
+  <h3>Key Insight</h3>
+  <p>In trying to produce a design that addresses our brief, we realized that
+    people were not particularly fond of our chat pairing prototype. We were
+    surprised by this, because in our initial round of user testing during the
+    Needs Analysis phase, we heard from a few users that they liked to read blogs
+    online by people who had been through the process before. People also seemed
+    to generally react positively to the idea of connecting with other people
+    going through the process at the same time as them.</p>
+
+  <p>When we asked users why they did not like this feature, they said that they
+    did not trust random strangers who just happened to be using the app at the
+    same time as them to answer their questions. They did not believe that these
+    people would necessarily have enough knowledge to be able to help them with
+    anything, since they also had not been through the process yet. One user
+    said that they didn't want the app to be like a "social network." What we
+    learned from this was that we were trying to solve two separate needs with
+    one prototype, and those two needs didn't mesh together particularly well.
+    While our user group might enjoy and benefit from a social network-type app,
+    they do not want this to be a part of their Visa application process. The
+    insight that we gained from this is that it is best to design for just one
+    need at a time.</p>
+
   <h3>Prototype One: Timeline</h3>
   <p>In our usability study with the timeline prototype, we tasked users to
     complete their I-20 form, which is the form an institution gives approving
@@ -110,55 +162,9 @@
     it. In addition, users questioned how far along they were in the process,
     which we did not show in our prototype.</p>
 
-  <h3>Final Design</h3>
-  <p>We noticed from our paper prototypes that there was confusion among our
-    users about what the prototype was actually doing, so we aimed to solidify
-    that in our final design. Our design is for managing the Visa application
-    process. It does not complete the application for the user. It takes elements
-    from both of our prototypes that users liked: the left to right layout of the
-    timeline, and the expanding panel from the list of steps. We also use bubble
-    size on the timeline to express subtasks of a larger task.</p>
-
-  <img class=smallimage src="images/final_design_1.jpg" alt="Final Design 1">
-  <img class=smallimage src="images/final_design_2.jpg" alt="Final Design 2">
-  <img class=smallimage src="images/final_design_3.jpg" alt="Final Design 3">
-
-  <p>In our card sorting exercise and in our usability test, Users showed they
-    care a lot about the timing of tasks--when they should start them and when
-    are they due--the context around tasks, how to complete a task, and what are
-    the prerequisites of a task. Our design meets all of these by having a
-    recommended start date and a deadline for each large task or milestone, by
-    having lots of room on the expanding panel for a description of why this step
-    is necessary and how to complete it, and by having a linear progression with
-    size indicating that the larger bubble needs the smaller bubbles to be
-    finished first.</p>
-
-  <img class=mediumimage src="images/cards.jpg" alt="Card Sorting">
-
-  <h3>Key Insight</h3>
-  <p>In trying to produce a design that addresses our brief, we realized that
-    people were not particularly fond of our chat pairing prototype. We were
-    surprised by this, because in our initial round of user testing during the
-    Needs Analysis phase, we heard from a few users that they liked to read blogs
-    online by people who had been through the process before. People also seemed
-    to generally react positively to the idea of connecting with other people
-    going through the process at the same time as them.</p>
-
-  <p>When we asked users why they did not like this feature, they said that they
-    did not trust random strangers who just happened to be using the app at the
-    same time as them to answer their questions. They did not believe that these
-    people would necessarily have enough knowledge to be able to help them with
-    anything, since they also had not been through the process yet. One user
-    said that they didn't want the app to be like a "social network." What we
-    learned from this was that we were trying to solve two separate needs with
-    one prototype, and those two needs didn't mesh together particularly well.
-    While our user group might enjoy and benefit from a social network-type app,
-    they do not want this to be a part of their Visa application process. The
-    insight that we gained from this is that it is best to design for just one
-    need at a time.</p>
 
   <h3>Shortcomings</h3>
-  
+
   <h4>The Process:</h4>
   <p>In our overall process (from needs analysis to now), we
     decided on a problem to solve based on limited knowledge of our users. We
