--- a/design_development.html
+++ b/design_development.html
@@ -21,22 +21,47 @@
 
   <h3>Final Design</h3>
 
-  <img class=smallimage src="images/final_design_1.jpg" align = "left" alt="Final Design 1">
+  <img class=mediumimage src="images/final_design_1.jpg" alt="Final Design 1">
 
   <p>Our product is an interface to help manage the Visa application process for exchange students. It does not complete the application for the user. Rather, it provides information on deadlines, and the steps you need to take to complete your visa. The key features are:</p>
 
   <ul>
-    <li><h4>A step based approach</h4> Users wanted to see a simple left to right or top down progression of what they have to do for their visa, step by step. Our timeline prototype allowed users to jump around in a different order, but it was still used only left-to-right in testing. Our list prototype was also used only top-to-down.</li>
 
-    <li><h4>Detailed help on how to complete each step</h4>We learned from our timeline prototype that just giving the basic steps like “acceptance letter” or “passport copy” are not enough. Students want to see more information on what each of those mean, and how to complete them.</li>
+    <li>
+      <h4>A step based approach</h4>
+      <p>Users wanted to see a simple left to right or top down progression of what they have to do for their visa, step by step. Our timeline prototype allowed users to jump around in a different order, but it was still used only left-to-right in testing. Our list prototype was also used only top-to-down.</p>
+      <img class=smallestimage src="images/feature_steps.png" alt="Final Design 1">
+    </li>
 
-    <li><h4>Ability to see a high level overview</h4>Users wanted to move through the tasks in order quickly, just to see their entire process before they even started. We originally had the “done” or “checkoff” button be the central call to action for each screen, and realized this wasn’t the right priority. This prototype, each screen’s primary call to action is the “next” button.</li>
+    <li>
+      <h4>Detailed help on how to complete each step</h4>
+      <p>We learned from our timeline prototype that just giving the basic steps like acceptance letter or passport copy are not enough. Students want to see more information on what each of those mean, and how to complete them.</p>
+      <img class=smallestimage src="images/feature_details.png" alt="Final Design 1">
+    </li>
 
-    <li><h4>Dates are extremely important to see at all times</h4>Dates and deadlines are very important to our users, because it was universally ranked within the top 5 on our cardsortings (results explained in further detail below). This prototype shows dates for all tasks on the top bar, and a detailed description of suggested start dates in each task.</li>
+      <br>
 
-    <li><h4>Prerequisites are important, and must be visualized in an intuitive way</h4>Prerequisites were also universally ranked within the top 5 in our cardsorting results. Our timeline showed prerequisites, but in many places, and in a slightly more confusing way. This prototype tries a new visualization: small dots are prerequisites, leading up to big dots, which are the final forms. This allows the prerequisites to work with our step based approach, and we will have to do further testing to see if it’s a useful visualization.</li>
+    <li>
+      <h4>Ability to see a high level overview</h4>
+      <p>Users wanted to move through the tasks in order quickly, just to see their entire process before they even started. We originally had the “done” or “checkoff” button be the central call to action for each screen, and realized this wasn’t the right priority. This prototype, each screen’s primary call to action is the “next” button.</p>
+      <img class=smallestimage src="images/feature_next.png" alt="Final Design 1">
+    </li>
+
+    <li>
+      <h4>Dates are extremely important to see at all times</h4>
+      <p>Dates and deadlines are very important to our users, because it was universally ranked within the top 5 on our cardsortings (results explained in further detail below). This prototype shows dates for all tasks on the top bar, and a detailed description of suggested start dates in each task.</p>
+      <img class=smallestimage src="images/feature_dates.png" alt="Final Design 1">
+    </li>
+
+    <li>
+      <h4>Prerequisites are important, and must be visualized in an intuitive way</h4>
+      <p>Prerequisites were also universally ranked within the top 5 in our cardsorting results. Our timeline showed prerequisites, but in many places, and in a slightly more confusing way. This prototype tries a new visualization: small dots are prerequisites, leading up to big dots, which are the final forms. This allows the prerequisites to work with our step based approach, and we will have to do further testing to see if it’s a useful visualization.</p>
+      <img class=smallestimage src="images/feature_prereqs.png" alt="Final Design 1">
+    </li>
   </ul>
 
+
+  <h3>Cardsorting</h3>
   <p>In our card sorting exercise and in our usability test, Users showed they
     care a lot about the timing of tasks--when they should start them and when
     are they due--the context around tasks, how to complete a task, and what are
@@ -49,7 +74,7 @@
 
   <img class=mediumimage src="images/cards.jpg" alt="Card Sorting">
 
-  <h3>Key Insight</h3>
+  <h3>Key Insights from Initial Prototypes</h3>
   <p>In trying to produce a design that addresses our brief, we realized that
     people were not particularly fond of our chat pairing prototype. We were
     surprised by this, because in our initial round of user testing during the
