Conclusion insights, and next steps

--- a/design_development.html
+++ b/design_development.html
@@ -74,28 +74,6 @@
 
   <img class=mediumimage src="images/cards.jpg" alt="Card Sorting">
 
-  <h3>Key Insights from Initial Prototypes</h3>
-  <p>In trying to produce a design that addresses our brief, we realized that
-    people were not particularly fond of our chat pairing prototype. We were
-    surprised by this, because in our initial round of user testing during the
-    Needs Analysis phase, we heard from a few users that they liked to read blogs
-    online by people who had been through the process before. People also seemed
-    to generally react positively to the idea of connecting with other people
-    going through the process at the same time as them.</p>
-
-  <p>When we asked users why they did not like this feature, they said that they
-    did not trust random strangers who just happened to be using the app at the
-    same time as them to answer their questions. They did not believe that these
-    people would necessarily have enough knowledge to be able to help them with
-    anything, since they also had not been through the process yet. One user
-    said that they didn't want the app to be like a "social network." What we
-    learned from this was that we were trying to solve two separate needs with
-    one prototype, and those two needs didn't mesh together particularly well.
-    While our user group might enjoy and benefit from a social network-type app,
-    they do not want this to be a part of their Visa application process. The
-    insight that we gained from this is that it is best to design for just one
-    need at a time.</p>
-
   <h3>Prototype One: Timeline</h3>
   <p>In our usability study with the timeline prototype, we tasked users to
     complete their I-20 form, which is the form an institution gives approving
@@ -188,9 +166,30 @@
     which we did not show in our prototype.</p>
 
 
-  <h3>Shortcomings</h3>
+  <h3>Key Insights from Initial Prototypes</h3>
+  <p>In trying to produce a design that addresses our brief, we realized that
+    people were not particularly fond of our chat pairing prototype. We were
+    surprised by this, because in our initial round of user testing during the
+    Needs Analysis phase, we heard from a few users that they liked to read blogs
+    online by people who had been through the process before. People also seemed
+    to generally react positively to the idea of connecting with other people
+    going through the process at the same time as them.</p>
 
-  <h4>The Process:</h4>
+  <p>When we asked users why they did not like this feature, they said that they
+    did not trust random strangers who just happened to be using the app at the
+    same time as them to answer their questions. They did not believe that these
+    people would necessarily have enough knowledge to be able to help them with
+    anything, since they also had not been through the process yet. One user
+    said that they didn't want the app to be like a "social network." What we
+    learned from this was that we were trying to solve two separate needs with
+    one prototype, and those two needs didn't mesh together particularly well.
+    While our user group might enjoy and benefit from a social network-type app,
+    they do not want this to be a part of their Visa application process. The
+    insight that we gained from this is that it is best to design for just one
+    need at a time.</p>
+
+
+  <h3>Shortcomings</h3>
   <p>In our overall process (from needs analysis to now), we
     decided on a problem to solve based on limited knowledge of our users. We
     started out with a rough idea for our user group: immigrant families looking
@@ -209,16 +208,17 @@
     possible implementations accordingly as we did user testing.
     </p>
 
-  <h4>The Prototype:</h4>
-  <p>
-  The paper prototypes that we created are written entirely in English with no option to change the language.
-    This assumes that our users are sufficiently proficient in English, which may
+  <h3>Next Steps</h3>
+  <p> Our initial prototypes helped us refine our key features. To summarize again, these are: using a step based approach, giving detailed descriptions on what each task is and how to complete them, and intuitively visualizing the key information of dates and prerequisites. We've planned some UIs for these, such as connected bubbles of various sizes. Our next step is to test these UIs and make sure they accomplish the goals for our key features.</p>
+
+    <p>We want to be careful with any roadblocks that could hinder us with this step. The paper prototypes that we created are written entirely in English with no option to change the language. This assumes that our users are sufficiently proficient in English, which may
     or may not be a reasonable assumption. On one hand, our user group does consist
     entirely of students, and typically English proficiency is a prerequisite for
     studying abroad in the U.S. On the other hand, this is not something that we
     specifically addressed during our user testing sessions in the Design
-    Development phase, and is probably something that we should look into
+    Development phase, and is something that we should look into
     further moving forward.</p>
+
 
 </body>
 </html>
