--- a/old_website/design_development.html
+++ b/old_website/design_development.html
@@ -9,25 +9,8 @@
 
   <h2>Design Development</h2>
 
-  <h4>Shortcomings of Our Approach (From Needs Analysis Phase)</h4>
-  <p>One shortcoming of our approach in the Needs Analysis phase was that we
-    decided on a problem to solve based on limited knowledge of our users. We
-    started out with a rough idea for our user group: immigrant families looking
-    for schools for their children. After spending some time trying to find users
-    to interview, we realized that this group would not be easily accessible to
-    us. Given the time constraints of this phase of the course, we decided to
-    pivot to a more accessible user group that was in the same vein as the first:
-    international and exchange students going through the paperwork process for
-    studying in the U.S. Because it took us a while to come to this realization
-    and to pivot our target user group, we ended up with even less time than
-    expected to interview users. The information that we collected was based
-    on limited information from a small set of initial user interviews. Thus,
-    the need that we had chosen to address and our initial ideas for solutions
-    may not have been as strong as they would have been otherwise. We aimed to
-    address this during the Design Development phase, adjusting our solution and
-    possible implementations accordingly as we did user testing.</p>
 
-  <h4>Process Overview</h4>
+  <h3>Process Overview</h3>
   <p>Last phase, we narrowed down our problem to assisting international and
     exchange students with the Visa process for entering the United States.
     This phase, we tried out multiple interfaces in order to find the elements
@@ -36,7 +19,62 @@
     one. From these usability studies, we collected feedback and synthesized the
     results into a final design. We will summarize our findings below.</p>
 
-  <h4>Prototype One: Timeline</h4>
+  <h3>Final Design</h3>
+
+  <img class=mediumimage src="images/final_design_1.jpg" alt="Final Design 1">
+
+  <p>Our product is an interface to help manage the Visa application process for exchange students. It does not complete the application for the user. Rather, it provides information on deadlines, and the steps you need to take to complete your visa. The key features are:</p>
+
+  <ul>
+
+    <li>
+      <h4>A step based approach</h4>
+      <p>Users wanted to see a simple left to right or top down progression of what they have to do for their visa, step by step. Our timeline prototype allowed users to jump around in a different order, but it was still used only left-to-right in testing. Our list prototype was also used only top-to-down.</p>
+      <img class=smallestimage src="images/feature_steps.png" alt="Final Design 1">
+    </li>
+
+    <li>
+      <h4>Detailed help on how to complete each step</h4>
+      <p>We learned from our timeline prototype that just giving the basic steps like acceptance letter or passport copy are not enough. Students want to see more information on what each of those mean, and how to complete them.</p>
+      <img class=smallestimage src="images/feature_details.png" alt="Final Design 1">
+    </li>
+
+      <br>
+
+    <li>
+      <h4>Ability to see a high level overview</h4>
+      <p>Users wanted to move through the tasks in order quickly, just to see their entire process before they even started. We originally had the “done” or “checkoff” button be the central call to action for each screen, and realized this wasn’t the right priority. This prototype, each screen’s primary call to action is the “next” button.</p>
+      <img class=smallestimage src="images/feature_next.png" alt="Final Design 1">
+    </li>
+
+    <li>
+      <h4>Dates are extremely important to see at all times</h4>
+      <p>Dates and deadlines are very important to our users, because it was universally ranked within the top 5 on our cardsortings (results explained in further detail below). This prototype shows dates for all tasks on the top bar, and a detailed description of suggested start dates in each task.</p>
+      <img class=smallestimage src="images/feature_dates.png" alt="Final Design 1">
+    </li>
+
+    <li>
+      <h4>Prerequisites are important, and must be visualized in an intuitive way</h4>
+      <p>Prerequisites were also universally ranked within the top 5 in our cardsorting results. Our timeline showed prerequisites, but in many places, and in a slightly more confusing way. This prototype tries a new visualization: small dots are prerequisites, leading up to big dots, which are the final forms. This allows the prerequisites to work with our step based approach, and we will have to do further testing to see if it’s a useful visualization.</p>
+      <img class=smallestimage src="images/feature_prereqs.png" alt="Final Design 1">
+    </li>
+  </ul>
+
+
+  <h3>Cardsorting</h3>
+  <p>In our card sorting exercise and in our usability test, Users showed they
+    care a lot about the timing of tasks--when they should start them and when
+    are they due--the context around tasks, how to complete a task, and what are
+    the prerequisites of a task. Our design meets all of these by having a
+    recommended start date and a deadline for each large task or milestone, by
+    having lots of room on the expanding panel for a description of why this step
+    is necessary and how to complete it, and by having a linear progression with
+    size indicating that the larger bubble needs the smaller bubbles to be
+    finished first.</p>
+
+  <img class=mediumimage src="images/cards.jpg" alt="Card Sorting">
+
+  <h3>Prototype One: Timeline</h3>
   <p>In our usability study with the timeline prototype, we tasked users to
     complete their I-20 form, which is the form an institution gives approving
     each user's study there. They completed a form to determine what Visa they
@@ -47,7 +85,7 @@
     marked done to complete the task. Some tasks had prerequisites, and so if
     they clicked the card before the prerequisite tasks were completed, the done
     box would be replaced with an x preventing them from completing in.</p>
-  <br>
+
   <p>From our usability studies, we found that there were many points of confusion
     with this prototype. First, users were confused on what the prototype's
     purpose was. Did it complete my application for me? Was it to walk me through
@@ -61,7 +99,17 @@
     expressed, but they did not seem to care much about spacing along the
     timeline representing time.</p>
 
-  <h4>Prototype Two: List of Steps and Chat Pairing</h4>
+    <img class=smallimage src="images/start_1.jpg" alt="Timeline 1">
+    <img class=smallimage src="images/start_2.jpg" alt="Timeline 2">
+    <img class=smallimage src="images/start_3.jpg" alt="Timeline 3">
+    <img class=smallimage src="images/start_4.jpg" alt="Timeline 4">
+    <img class=smallimage src="images/timeline_1.jpg" alt="Timeline 5">
+    <img class=smallimage src="images/timeline_2.jpg" alt="Timeline 6">
+    <img class=smallimage src="images/timeline_3.jpg" alt="Timeline 7">
+    <img class=smallimage src="images/timeline_4.jpg" alt="Timeline 8">
+    <img class=smallimage src="images/timeline_5.jpg" alt="Timeline 9">
+
+  <h3>Prototype Two: List of Steps and Chat Pairing</h3>
   <p>With our list-based and task-oriented prototype, we asked users to go
     through a sample Visa application that we had broken up into achievable
     steps. All the tasks necessary to complete the Visa form were on the left
@@ -76,7 +124,7 @@
     people who had gone through a similar process and were available to chat.
     The user could then ask the person any questions, and once the issue was
     resolved, close the window.</p>
-  <br>
+
   <p>In our studies using the list of steps prototype with assistance provided by
     pairing users at different stages in the process, we found that the task-based
     system was well-received, but users were not interested in the chat option.
@@ -88,7 +136,7 @@
     easier to fill out the form. Users were at first confused about the order in
     which the steps were placed, and so an important iteration would be to have
     the finished tasks on the top.</p>
-  <br>
+
   <p>While our initial conversations with users seemed to point to a feature that
     would allow the user to connect with another person that had gone through a
     similar process, this ended up not feature that users were interested in. This
@@ -97,40 +145,28 @@
     did not appeal to the users. Users were more likely to consult a FAQ, Google,
     or an administrator rather than the chat.</p>
 
-  <h4>Prototype Three: Chat</h4>
+  <img class=smallimage src="images/list_1.jpg" alt="List 1">
+  <img class=smallimage src="images/list_2.jpg" alt="List 2">
+  <img class=smallimage src="images/list_3.jpg" alt="List 3">
+  <img class=smallimage src="images/list_4.jpg" alt="List 4">
+  <img class=smallimage src="images/list_5.jpg" alt="List 5">
+
+  <h3>Prototype Three: Chat</h3>
   <p>We also tested a chat/messenger based prototype with our users. Users were
     tasked to also complete up to their I-20 form. Users completed each task step
     by step as a narrator walked them through the task to complete. When forms or
     photos of documents were required, a input bubble would pop up allowing the
     user to add the image needed with the app also validating it to make sure it
     was correct.
-  <br>
+
   <p>However, in walking users through the prototype, like when we walked them
     through the timeline, users were confused whether the app was actually
     completing their application for them or just walking them through completing
     it. In addition, users questioned how far along they were in the process,
     which we did not show in our prototype.</p>
 
-  <h3>Final Design</h3>
-  <p>We noticed from our paper prototypes that there was confusion among our
-    users about what the prototype was actually doing, so we aimed to solidify
-    that in our final design. Our design is for managing the Visa application
-    process. It does not complete the application for the user. It takes elements
-    from both of our prototypes that users liked: the left to right layout of the
-    timeline, and the expanding panel from the list of steps. We also use bubble
-    size on the timeline to express subtasks of a larger task.</p>
-  <br>
-  <p>In our card sorting exercise and in our usability test, Users showed they
-    care a lot about the timing of tasks--when they should start them and when
-    are they due--the context around tasks, how to complete a task, and what are
-    the prerequisites of a task. Our design meets all of these by having a
-    recommended start date and a deadline for each large task or milestone, by
-    having lots of room on the expanding panel for a description of why this step
-    is necessary and how to complete it, and by having a linear progression with
-    size indicating that the larger bubble needs the smaller bubbles to be
-    finished first.</p>
 
-  <h3>Key Insight</h3>
+  <h3>Key Insights from Initial Prototypes</h3>
   <p>In trying to produce a design that addresses our brief, we realized that
     people were not particularly fond of our chat pairing prototype. We were
     surprised by this, because in our initial round of user testing during the
@@ -138,7 +174,7 @@
     online by people who had been through the process before. People also seemed
     to generally react positively to the idea of connecting with other people
     going through the process at the same time as them.</p>
-  <br>
+
   <p>When we asked users why they did not like this feature, they said that they
     did not trust random strangers who just happened to be using the app at the
     same time as them to answer their questions. They did not believe that these
@@ -152,24 +188,37 @@
     insight that we gained from this is that it is best to design for just one
     need at a time.</p>
 
+
   <h3>Shortcomings</h3>
-  <p>We noticed from our paper prototypes that there was confusion among our
-    users about what the prototype was actually doing, so we aimed to solidify
-    that in our final design. Our design is for managing the Visa application
-    process. It does not complete the application for the user. It takes elements
-    from both of our prototypes that users liked: the left to right layout of the
-    timeline, and the expanding panel from the list of steps. We also use bubble
-    size on the timeline to express subtasks of a larger task.</p>
-  <br>
-  <p>In our card sorting exercise and in our usability test, Users showed they
-    care a lot about the timing of tasks--when they should start them and when
-    are they due--the context around tasks, how to complete a task, and what are
-    the prerequisites of a task. Our design meets all of these by having a
-    recommended start date and a deadline for each large task or milestone, by
-    having lots of room on the expanding panel for a description of why this step
-    is necessary and how to complete it, and by having a linear progression with
-    size indicating that the larger bubble needs the smaller bubbles to be
-    finished first.</p>
+  <p>In our overall process (from needs analysis to now), we
+    decided on a problem to solve based on limited knowledge of our users. We
+    started out with a rough idea for our user group: immigrant families looking
+    for schools for their children. After spending some time trying to find users
+    to interview, we realized that this group would not be easily accessible to
+    us. Given the time constraints of this phase of the course, we decided to
+    pivot to a more accessible user group that was in the same vein as the first:
+    international and exchange students going through the paperwork process for
+    studying in the U.S. Because it took us a while to come to this realization
+    and to pivot our target user group, we ended up with even less time than
+    expected to interview users. The information that we collected was based
+    on limited information from a small set of initial user interviews. Thus,
+    the need that we had chosen to address and our initial ideas for solutions
+    may not have been as strong as they would have been otherwise. We aimed to
+    address this during the Design Development phase, adjusting our solution and
+    possible implementations accordingly as we did user testing.
+    </p>
+
+  <h3>Next Steps</h3>
+  <p> Our initial prototypes helped us refine our key features. To summarize again, these are: using a step based approach, giving detailed descriptions on what each task is and how to complete them, and intuitively visualizing the key information of dates and prerequisites. We've planned some UIs for these, such as connected bubbles of various sizes. Our next step is to test these UIs and make sure they accomplish the goals for our key features.</p>
+
+    <p>We want to be careful with any roadblocks that could hinder us with this step. The paper prototypes that we created are written entirely in English with no option to change the language. This assumes that our users are sufficiently proficient in English, which may
+    or may not be a reasonable assumption. On one hand, our user group does consist
+    entirely of students, and typically English proficiency is a prerequisite for
+    studying abroad in the U.S. On the other hand, this is not something that we
+    specifically addressed during our user testing sessions in the Design
+    Development phase, and is something that we should look into
+    further moving forward.</p>
+
 
 </body>
 </html>
