--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@ layout: default
 ---
 <script src="{{ "/styles/index.js" | prepend: site.baseurl }}"></script>
 <div>
-  <a id="posts-btn" class="waves-effect waves-brick btn-flat btn-large" onclick="show_posts();">{{ site.posts_btn }}</a>
-  <a id="projects-btn" class="waves-effect waves-brick btn-flat btn-large" onclick="show_projects();">{{ site.projects_btn }}</a>
+  <a id="posts-btn" class="btn-flat btn-large" onclick="show_posts();">{{ site.posts_btn }}</a>
+  <a id="projects-btn" class="btn-flat btn-large" onclick="show_projects();">{{ site.projects_btn }}</a>
 </div>
 <div id="posts">
 
@@ -22,7 +22,7 @@ layout: default
   </ul>
 
   <div>
-    <a onclick="hide_lists();" class="waves-effect waves-brick btn-flat btn-large">{{ site.close_btn }}</a>
+    <a onclick="hide_lists();" class="btn-flat btn-large">{{ site.close_btn }}</a>
   </div>
 </div>
 
@@ -33,7 +33,7 @@ layout: default
       Information about us coming soon.
     </p>
   <div>
-    <a onclick="hide_lists();" class="waves-effect waves-brick btn-flat btn-large">{{ site.close_btn }}</a>
+    <a onclick="hide_lists();" class="btn-flat btn-large">{{ site.close_btn }}</a>
   </div>
 </div>
 
