--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<script src="{{ "/styles/index.js" | prepend: site.burl }}"></script>
+<script src="{{ "/styles/index.js" | prepend: site.baseurl }}"></script>
 <div>
   <a id="posts-btn" class="btn-flat btn-large" onclick="show_posts();">{{ site.posts_btn }}</a>
   <a id="projects-btn" class="btn-flat btn-large" onclick="show_projects();">{{ site.projects_btn }}</a>
@@ -14,7 +14,7 @@ layout: default
     {% for post in site.posts %}
     <li>
       <p class="my-item">
-        <a href="{{ post.url | prepend: site.burl }}" class="my-link">{{ post.title }}</a><br>
+        <a href="{{ post.url | prepend: site.baseurl }}" class="my-link">{{ post.title }}</a><br>
         <span class="my-item-sub">{{ post.description }}</span>
       </p>
     </li>
@@ -46,14 +46,14 @@ layout: default
       {% for post in site.posts %}
       <li>
         <p class="my-item">
-          <a href="{{ post.url | prepend: site.burl }}" class="my-link">{{ post.title }}</a><br>
+          <a href="{{ post.url | prepend: site.baseurl }}" class="my-link">{{ post.title }}</a><br>
           <span class="my-item-sub">{{ post.date | date: "%b %-d, %Y" }}</span>
         </p>
       </li>
       {% endfor %}
       <li>
         <p class="my-item">
-          <a href="{{ "/feed.xml" | prepend: site.burl }}" class="my-link">RSS</a> / <a href="{{ "/atom.xml" | prepend: site.burl }}" class="my-link">ATOM</a><br>
+          <a href="{{ "/feed.xml" | prepend: site.baseurl }}" class="my-link">RSS</a> / <a href="{{ "/atom.xml" | prepend: site.baseurl }}" class="my-link">ATOM</a><br>
           <span class="my-item-sub"><i class="fa fa-rss" aria-hidden="true"></i> {{ site.rss_badge }}</span>
       </li>
     </ul>
